--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,11 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
-
+#expose all endpoints
 management.endpoints.web.exposure.include=*
+#exclude specific endpoints
+#management.endpoints.web.exposure.exclude=info,beans
+#Disable endpoints by default
+management.endpoints.enabled-by-default=false
+#expose only info endpoint
+management.endpoint.info.enabled=true
