Updated properties to expose detailed health endpoint and health-group endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=info,beans
 #management.endpoints.enabled-by-default=false
 #management.endpoint.info.enabled=true
+
+#enable details for health endpoint
+management.endpoint.health.show-details=always
+#group metrics together
+management.endpoint.health.group.health-group.include=ping,diskSpace
