Override base-path for actuator and health endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,9 @@ info.app.version=@project.version@
 info.app.java.version=@java.version@
 info.build-timestamp=@maven.build.timestamp@
 
-management.endpoints.web.base-path=/manage
+#change base path from /actuator to /manage
+#management.endpoints.web.base-path=/manage
 
+#overriding health endpoint path
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.health=healthcheck
